# escher_openrave_cpp

./: .gitignore  CMakeLists.txt  README.md  catkin.cmake  package.xml  setup.py
data/escher_motion_planning_data/: step_transition_model_ik_verified.txt  step_transition_model_ik_verified_legs_only.txt  step_transition_model_mid_range.txt  step_transition_model_mid_range_2.txt  step_transition_model_mid_range_straight.txt  step_transition_model_mid_range_symmetric.txt  step_transition_model_straight.txt  step_transition_model_straight_dynopt_test.txt  step_transition_model_straight_v2.txt  step_transition_model_straight_v3.txt  step_transition_model_straight_v4.txt  step_transition_model_straight_v5.txt  step_transition_model_test.txt
data/test_env/: environments_10  environments_11  environments_3  environments_4  environments_5  environments_6  environments_7  environments_8  environments_9
include/: ContactPoint.hpp  ContactSpacePlanning.hpp  ContactState.hpp  Drawing.hpp  DynOptInterface.hpp  EscherMotionPlanning.hpp  GIWC.hpp  GeneralIKInterface.hpp  GroundContactPointGrid.hpp  MapGrid.hpp  MapGrid_backup.hpp  MapGrid_query_one_by_one.hpp  NeuralNetworkInterface.hpp  OptimizationInterface.hpp  RobotProperties.hpp  SurfaceContactPointGrid.hpp  TorsoPathPlanning.hpp  TrimeshSurface.hpp  Utilities.hpp
scripts/: 9_100_0_L  9_100_0_R  9_100_S  SL_region_list_0.txt  Untitled Document  abnormal_dynamic_cost.py  cell_distribution.py  check_custom_loss.py  check_data.py  check_distance.py  check_dynamic_cost_distribution.py  check_dynamic_cost_distribution_plus_type.py  check_model.py  check_model_error.py  check_torso_transition_model.py  check_transitions_type.py  check_wall.py  check_wall_1.py  check_wall_2.py  check_wall_3.py  check_wall_4.py  check_whether_wall.py  check_zero_ddyn.py  color_library.py  com_combinations.py  combine_ddyn.py  combine_ddyn_subset.py  compute_ddym.py  compute_ddyn.py  compute_ddyn_2.py  compute_ddyn_debug.py  compute_ddyn_gpu_3_4_5.sh  compute_ddyn_gpu_9_10_11.sh  compute_ddyn_plus_type.py  compute_ddyn_without_check.py  contact_projection.py  contact_transition_sampler.py  copy_contact.py  copy_contact_transition_sampler.py  copy_environment_handler_2.py  (+65 more)
scripts/backup/: env_10_backward  env_10_dijkstra_with_dynamics_forward.txt  env_10_forward  env_10_pred_0  env_13_dijkstra_with_dynamics.txt  env_14_dijkstra_with_dynamics.txt
scripts/depth_and_boundary_maps/: 1.txt  10.txt  10_10_0_ground.txt  10_10_10_ground.txt  10_10_11_ground.txt  10_10_12_ground.txt  10_10_13_ground.txt  10_10_14_ground.txt  10_10_15_ground.txt  10_10_16_ground.txt  10_10_17_ground.txt  10_10_18_ground.txt  10_10_19_ground.txt  10_10_1_ground.txt  10_10_20_ground.txt  10_10_21_ground.txt  10_10_22_ground.txt  10_10_23_ground.txt  10_10_2_ground.txt  10_10_3_ground.txt  10_10_4_ground.txt  10_10_5_ground.txt  10_10_7_ground.txt  10_10_8_ground.txt  10_10_9_ground.txt  10_11_0_ground.txt  10_11_10_ground.txt  10_11_11_ground.txt  10_11_12_ground.txt  10_11_13_ground.txt  10_11_14_ground.txt  10_11_15_ground.txt  10_11_16_ground.txt  10_11_17_ground.txt  10_11_18_ground.txt  10_11_19_ground.txt  10_11_1_ground.txt  10_11_20_ground.txt  10_11_21_ground.txt  10_11_22_ground.txt  (+4042 more)
scripts/escher_openrave_cpp_wrapper/: __init__.py  escher_openrave_cpp_wrapper.py
scripts/neural_network/model_0/: model_v0.py  model_v1.py  model_v2.py  test.py  trace_model.py  train.py
scripts/neural_network/model_1/: train.py
scripts/neural_network/model_2/: model_v0.py  model_v1.py  trace_model.py  train.py
scripts/neural_network/model_3/: dataset.py  trace_model.py  train.py
scripts/neural_network/old_pipeline_p1p2/: analyze_error_2.py  depth_and_boundary_combined_A_0_weighted_0.002_loss_history  depth_and_boundary_combined_B_0_weighted_0.001_loss_history  depth_and_boundary_combined_B_1_weighted_0.001_loss_history  depth_and_boundary_combined_B_2_weighted_0.001_loss_history  depth_and_boundary_combined_B_8_weighted_0.0005_loss_history  depth_and_boundary_combined_B_8_weighted_0.003_loss_history  depth_and_boundary_combined_B_9_weighted_0.0005_loss_history  depth_and_boundary_combined_B_9_weighted_0.001_loss_history  model_B_1.py  model_B_10.py  model_B_12.py  model_B_17.py  model_B_3.py  model_B_4.py  model_B_6.py  model_B_7.py  model_B_9.py  model_v10.py  special_dataset.py  train.py
scripts/neural_network/p1/: model_v0.py
scripts/neural_network/p1p2/: analyze_error.py  analyze_error_1.py  analyze_error_2.py  analyze_error_3.py  analyze_error_4.py  analyze_error_5.py  dataset.py  dataset_1.py  depth_and_boundary_combined_A_0_weighted_0.0005_loss_history  model.py  model_0.py  (+61 more)
scripts/old_codes/: compute_ddyn_debug.py  compute_ddyn_save_zero.py  generate_boundary_and_depth_map_old.py
scripts/test/: 0_11_new.txt  10_11_new.txt  11_11_new.txt  12_11_new.txt  13_11_new.txt  14_11_new.txt  15_11_new.txt  16_11_new.txt  17_11_new.txt  18_11_new.txt  19_11_new.txt  1_11_new.txt  20_11_new.txt  21_11_new.txt  22_11_new.txt  23_11_new.txt  2_11_new.txt  3_11_new.txt  4_11_new.txt  5_11_new.txt  6_11_new.txt  7_11_new.txt  8_11_new.txt  9_11_new.txt  env_10_dijkstra_once.txt  env_11_dijkstra_once.txt  env_11_dijkstra_once_old.txt  sort.py  split.py  visualize.py
src/: ContactPoint.cpp  ContactSpacePlanning.cpp  ContactState.cpp  Drawing.cpp  DynOptInterface.cpp  EscherMotionPlanning.cpp  EscherMotionPlanning_backup.cpp  GIWC.cpp  GeneralIKInterface.cpp  MapGrid.cpp  MapGrid_backup.cpp  MapGrid_query_one_by_one.cpp  NeuralNetworkInterface.cpp  OptimizationInterface.cpp  PointGrid.cpp  RobotProperties.cpp  SurfaceContactPointGrid.cpp  TorsoPathPlanning.cpp  TrimeshSurface.cpp  Utilities.cpp
test_MapGrid/: MapGrid.cpp  MapGrid.hpp
test_depth_map/ground_depth_maps/: 10_0  10_1  10_2  11_0  11_1  11_2  3_0  3_1  3_2  4_0  4_1  4_2  5_0  5_1  5_2  6_0  6_1  6_2  7_0  7_1  7_2  8_0  8_1  8_2  9_0  9_1  9_2
test_depth_map/wall_depth_maps/: 10_0  10_1  10_2  11_0  11_1  11_2  3_0  3_1  3_2  4_0  4_1  4_2  5_0  5_1  5_2  6_0  6_1  6_2  7_0  7_1  7_2  8_0  8_1  8_2  9_0  9_1  9_2
(+5 files in other folders)
